; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/bearssl/src/ec/extr_ec_p256_m31.c_api_mul.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/bearssl/src/ec/extr_ec_p256_m31.c_api_mul.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i64, i8*, i64, i32)* @api_mul to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @api_mul(i8* %0, i64 %1, i8* %2, i64 %3, i32 %4) #0 {
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i64, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  store i8* %0, i8** %6, align 8
  store i64 %1, i64* %7, align 8
  store i8* %2, i8** %8, align 8
  store i64 %3, i64* %9, align 8
  store i32 %4, i32* %10, align 4
  %13 = load i32, i32* %10, align 4
  %14 = load i8*, i8** %6, align 8
  %15 = load i64, i64* %7, align 8
  %16 = call i32 @p256_decode(i32* %12, i8* %14, i64 %15)
  store i32 %16, i32* %11, align 4
  %17 = load i8*, i8** %8, align 8
  %18 = load i64, i64* %9, align 8
  %19 = call i32 @p256_mul(i32* %12, i8* %17, i64 %18)
  %20 = load i64, i64* %7, align 8
  %21 = icmp uge i64 %20, 65
  br i1 %21, label %22, label %26

22:                                               ; preds = %5
  %23 = call i32 @p256_to_affine(i32* %12)
  %24 = load i8*, i8** %6, align 8
  %25 = call i32 @p256_encode(i8* %24, i32* %12)
  br label %26

26:                                               ; preds = %22, %5
  %27 = load i32, i32* %11, align 4
  ret i32 %27
}

declare dso_local i32 @p256_decode(i32*, i8*, i64) #1

declare dso_local i32 @p256_mul(i32*, i8*, i64) #1

declare dso_local i32 @p256_to_affine(i32*) #1

declare dso_local i32 @p256_encode(i8*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
